--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -23,6 +23,11 @@
 	padding: 0.2em 1.5em;
 }
 
+section{
+	padding :auto;
+	margin:auto;
+}
+
 .warning {
 	color: red;
 	font-weight: 400;
@@ -47,6 +52,15 @@ body {
 	word-break: break-word;
 }
 
+h1{
+	font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #333);
+	  -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    margin:0px 10px 0px 10px;
+	
+}
 button.grad {
 	background-image: linear-gradient(to right, #FF512F 0%, #DD2476 51%, #FF512F 100%)
 }
@@ -108,26 +122,7 @@ div#links {
 	padding: 0.5em 0 0 0;
 }
 
-h1 {
-	border-bottom: 1px solid #ccc;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 500;
-	margin: 0 0 0.8em 0;
-	padding: 0 0 0.2em 0;
-}
 
-h2 {
-	color: #444;
-	font-weight: 500;
-}
-
-h3 {
-	border-top: 1px solid #eee;
-	color: #666;
-	font-weight: 500;
-	margin: 10px 0 10px 0;
-	white-space: nowrap;
-}
 
 li {
 	margin: 0 0 0.4em 0;
